/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.2.1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava

    // Memakai dependency FlatLaf untuk style GUI
    implementation 'com.formdev:flatlaf:3.6.2'

    // Dependency untuk koneksi MySQL/MariaDB
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.4.1'
    
    // Dependency untuk logging MariaDB
    implementation 'org.slf4j:slf4j-simple:2.0.12'

    // Dependency untuk memproses BCrypt
    implementation 'org.mindrot:jbcrypt:0.4'

    // Dependency untuk PDF (iText)
    implementation 'com.itextpdf:itextpdf:5.5.13.4'

    // ganti versi sesuai kebutuhan, saat ini 7.2.5 adalah versi stabil umum
    implementation 'com.itextpdf:itext7-core:7.2.5'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'com.krispachi.KasirTokoKomik.App'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

tasks.withType(JavaExec) {
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
}